[fix]: fully override dtos